# Ask-Finance

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
data/: README.md  budget_monthly.csv  pl_monthly.csv  projects.csv  rbac.json
docs/: ARCHITECTURE.md  FUTURE.md
src/ask_finance/: __init__.py  agent.py  config.py  data_loaders.py  gemini.py  logging_setup.py  rbac.py  tools.py
